--- a/contacts.html
+++ b/contacts.html
@@ -235,7 +235,7 @@
         crossorigin="anonymous"></script>
     <!-- Optional JavaScript -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/js/materialize.min.js"></script>
-    <script src="js/index.js"></script>
+    <script src="https://raw.githubusercontent.com/webstudylab/tutor/master/js/index.js"></script>
 </body>
 
 </html>
