--- a/contacts.html
+++ b/contacts.html
@@ -29,10 +29,10 @@
                         data-id="">Задать вопрос эксперту</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">GPU СЕРВЕРЫ <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">MENU1 <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Б/У СЕРВЕРЫ</a>
+                    <a class="nav-link" href="#">MENU2</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="knowledgebase.html">ЧаВо</a>
@@ -51,8 +51,8 @@
 
     <header class="mt-3">
         <div class="jumbotron headline2">
-            <h1 class="display-4"><span class="accent">Серверы </span>для бизнеса</h1>
-            <h2 class="lead">GPU Серверы для Вычислений</h2>
+            <h1 class="display-4"><span class="accent">Информационная безопасность </span>для бизнеса</h1>
+            <h2 class="lead">Современная безопасность в цифровой компании</h2>
             <!--<a href="#myModal" class="open-AddItemDialog btn btn-outline-dark" data-toggle="modal" data-target="#myModal"
                 data-id="">Задать вопрос эксперту</a>-->
         </div>
@@ -115,20 +115,20 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-12 col-md-9 order-md-1 order-2">
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4500.876833515361!2d37.74894363210924!3d55.663976000000865!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x414ab4173737f481%3A0x89ecf4abde40f2c1!2z0JHRgNCw0YLQuNGB0LvQsNCy0YHQutCw0Y8g0YPQuy4sIDYsINCc0L7RgdC60LLQsCwgMTA5NDUx!5e0!3m2!1sru!2sru!4v1538312842519"
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2246.869223533605!2d37.75662814737708!3d55.726024847765196!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x414ab56ece6fa063%3A0xd9812b70997ac5a6!2sDzhoul&#39;+Bts!5e0!3m2!1sen!2sru!4v1540385027905" 
                     width="100%" height="450" frameborder="0" style="border:1" allowfullscreen></iframe>
             </div>
             <div class="col-sm-12 col-md-3 order-md-2 order-1 features my-3">
                 <h3 class="text-center">Связаться с нами:</h3>
                 <div class="c-info">
-                    <h5><i class="fas fa-phone fa-lg"></i><a href="tel:+74951180347"> +7(495)118-03-47</a></h5>
+                    <h5><i class="fas fa-phone fa-lg"></i><a href="tel:+7495xxxxxxx"> +7(495)xxx-xx-xx</a></h5>
                 </div>
                 <div class="c-info">
-                    <h5><i class="fas fa-at fa-lg"></i><a href="mailto:sales@coloded.ru"> sales@coloded.ru</a></h5>
+                    <h5><i class="fas fa-at fa-lg"></i><a href="mailto:sales@robotutor.pro"> sales@robotutor.pro</a></h5>
                 </div>
                 <div class="c-info">
-                    <h5><i class="fab fa-telegram-plane fa-lg"></i><a href="http://t.me/coloded_bot" target="_blank">
-                            @coloded_bot</a></h5>
+                    <h5><i class="fab fa-telegram-plane fa-lg"></i><a href="http://t.me/robotutor_bot" target="_blank">
+                            @robotutor_bot</a></h5>
                 </div>
             </div>
         </div>
@@ -138,19 +138,19 @@
         <div class="row">
             <div class="col-sm-12 col-md-6">
                 <div class="c-info">
-                    <h5><i class="fas fa-map-marked-alt"></i> Юридический адрес:</h5><p> 140150, Раменский район, п. Быково, ул. Советская, д. 1</p>
+                    <h5><i class="fas fa-map-marked-alt"></i> Юридический адрес:</h5><p> 140150, Районный район, п. Поселок, ул. Улица, д. 1</p>
                 </div>
                 <div class="c-info">
-                    <h5><i class="far fa-envelope"></i> Почтовый адрес для документов:</h5> <p>140150, Раменский район, п. Быково, а/я 16<p>
+                    <h5><i class="far fa-envelope"></i> Почтовый адрес для документов:</h5> <p>1140150, Районный район, п. Поселок, ул. Улица, а/я 1<p>
                 </div>
                 <div class="c-info">
                     <h5><i class="fas fa-money-check-alt"></i> Банковские реквизиты:<br></h5>
-                        <p>АО «АЛЬФА-БАНК», отделение банка ДО «АВТОЗАВОДСКИЙ ПРОЕЗД»<br>
-                        БИК: 044525593<br>
-                        P/C: 40702810802370002863<br>
-                        Корр. Сч.: 30101810200000000593<br>
-                        ИНН: 5040151580<br>
-                        КПП: 504001001</p>
+                        <p>АО «БАНК», отделение банка ДО «ДОПОЛНИТЕЛЬНОЕ»<br>
+                        БИК: <br>
+                        P/C: <br>
+                        Корр. Сч.: <br>
+                        ИНН: <br>
+                        КПП: </p>
                 </div>
             </div>
             <div class="col-sm-12 col-md-6">
@@ -195,21 +195,21 @@
         <div class="container p-3">
             <div class="row text-center text-xs-center text-sm-left text-md-left">
                 <div class="col-xs-12 col-sm-4 col-md-4">
-                    <h5 class="title">ООО "Колодед"</h5>
-                    <p><i class="fas fa-map-marker-alt"></i> Москва, ул. Братиславская, 6</p>
+                    <h5 class="title">ООО "РобоТьютор"</h5>
+                    <p><i class="fas fa-map-marker-alt"></i> Москва, ул. Улица, 1</p>
                 </div>
                 <div class="col-xs-12 col-sm-4 col-md-4">
                     <h5>Контакты</h5>
-                    <p><i class="fas fa-phone fa-lg"></i><a href="tel:+74951180347"> +7(495)118-03-47</a></p>
-                    <p><i class="fas fa-at fa-lg"></i><a href="mailto:sales@coloded.ru"> sales@coloded.ru</a></p>
-                    <p><i class="fab fa-telegram-plane fa-lg"></i><a href="http://t.me/coloded_bot" target="_blank">
-                            @coloded_bot</a></p>
+                    <p><i class="fas fa-phone fa-lg"></i><a href="tel:+7495xxxxxxx"> +7(495)xxx-xx-xx</a></p>
+                    <p><i class="fas fa-at fa-lg"></i><a href="mailto:sales@coloded.ru"> sales@robotutor.pro</a></p>
+                    <p><i class="fab fa-telegram-plane fa-lg"></i><a href="http://t.me/robotutor_bot" target="_blank">
+                            @robotutor_bot</a></p>
                 </div>
                 <div class="col-xs-12 col-sm-4 col-md-4">
-                    <h5 class="title"><span class="col1">COLODED </span><i class="far fa-copyright fa-lg"></i> 2018</h5>
+                    <h5 class="title"><span class="col1">ROBOTUTOR </span><i class="far fa-copyright fa-lg"></i> 2018</h5>
                     <ul class="list-unstyled quick-links">
-                        <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i> GPU СЕРВЕРЫ</a></li>
-                        <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i> Б/У СЕРВЕРЫ</a></li>
+                        <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i> МЕНЮ1</a></li>
+                        <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i> МЕНЮ2</a></li>
                         <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i> ЧаВо</a></li>
                         <li><a href="javascript:void();"><i class="fa fa-angle-double-right"></i> О КОМПАНИИ</a></li>
                     </ul>
