--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
         crossorigin="anonymous">
-    <link rel="stylesheet" href="https://raw.githubusercontent.com/webstudylab/tutor/master/css/main.css">
+    <link rel="stylesheet" href="https://webstudylab.github.io/tutor/css/main.css">
 </head>
 
 <body>
